--- a/cvcamilamonteiro.html
+++ b/cvcamilamonteiro.html
@@ -21,7 +21,7 @@
     <div class="profile-desc">
       <h3>Camila Monteiro</h3>
       <h4>O que eu quero</h4>
-      <p>Desenvolver lojas, sites institucionais ou landing pages para pequenos negócios.</p>
+      <p>Desenvolver loja, site institucional ou landing page para pequenos negócios.</p>
       <p>Oportunidades que unam minha experiência em sites com modelagem 3D ou IoT. </p>
     </div>
     <div class="profile-info">
